pr template link

--- a/data/p/create-a-code-review-guideline.mdx
+++ b/data/p/create-a-code-review-guideline.mdx
@@ -11,7 +11,9 @@ image: "/blog/static/images/code-review-guideline/codereview-guideline.jpg"
 
 A code review guideline is a set of rules for submitting and reviewing code changes in a project. It outlines the steps for creating a pull request, submitting it for review, and merging it into the codebase.
 
-It's important because it establishes a clear and consistent process for collaborating. It can improve code quality, reduce review time, and ensure a smoother development process. Teams, developers, and managers can all benefit from a defined guideline.
+It's important because it establishes a clear and consistent process for collaborating. It can improve code quality, reduce review time, and ensure a smoother development process. Teams, developers, and managers can all benefit from a defined guideline. Along with the code review guideline, I think every engineering team should have a pull request template automatically created, you can find [our pull request templates](https://axolo.co/blog/p/part-3-github-pull-request-template) on our blog as well.
+
+If you're not interested in reading the whole article, you can jump to the [our open-source code review guideline template](https://github.com/axolo-co/developer-resources/blob/main/code-review-guideline-template/code-review-guideline-template.md).
 
 <ImageContainer
   alt="code review"
