--- a/data/p/2023-09-01-changelog copy.mdx
+++ b/data/p/2023-09-01-changelog copy.mdx
@@ -6,7 +6,7 @@ draft: false
 summary: "Axolo's latest update introduces mobile notification previews, GitLab code suggestions, and a multi-organization management for Enterprise users. We've improved feature access, webhook handling, and query efficiency, alongside fixing several bugs related to code comments, onboarding, and markdown rendering."
 ---
 
-✨ NEW:
+## ✨ NEW:
 
 - We've added preview text for mobile notifications and the notification center in team channels.
 - We've added the ability for GitLab organizations to get code suggestions using ChatGPT.
@@ -21,7 +21,7 @@ summary: "Axolo's latest update introduces mobile notification previews, GitLab 
 - Ability to delete PR in our DB upon merge
 - Created a new service to force a refresh on GitLab token if it fails
 
-🔨 IMPROVEMENT:
+## 🔨 IMPROVEMENT:
 
 - We've added the possibility to add GitLab Merge Requests to the MergeTrain using the /axolo merge command.
 - We improved the ability to enable features from team channels for Enterprise Users.
@@ -29,7 +29,7 @@ summary: "Axolo's latest update introduces mobile notification previews, GitLab 
 - Improved the ability to enforce users to have same emails in Slack and GitHub to avoid impersonation.
 - Improved the way we handle queries for engineers for multi-orgs accounts.
 
-🐞 FIX:
+## 🐞 FIX:
 
 - We've fixed a bug where links inside code comments were getting added brackets.
 - We fixed a bug for notifications for new onboarded collaborators.
