--- a/data/p/2023-11-01-changelog.mdx
+++ b/data/p/2023-11-01-changelog.mdx
@@ -6,7 +6,7 @@ draft: false
 summary: "Axolo's latest update brings GitHub Proxy integration for enterprises, stronger security against impersonation, and automated PR channel management. Sign-in is faster and more secure, with improved Slack message formatting. Enhancements include better customer success alerts, updated onboarding, and smarter analytics. Bugs in team channel management, weekend reminders, sign-in for organization-less users, and PR channel archiving have been fixed, along with a code cleanup."
 ---
 
-✨ NEW:
+## ✨ NEW:
 
 - Enabled enterprise customers to add their GitHub Proxy address.
 - Added more security features around impersonation for Enterprises.
@@ -15,7 +15,7 @@ summary: "Axolo's latest update brings GitHub Proxy integration for enterprises,
 - Improved sign in process with added security and less waiting time.
 - Improved simple slack link formatting for edited messages.
 
-🔨 IMPROVEMENT:
+## 🔨 IMPROVEMENT:
 
 - Improved internal notifications for customer success.
 - Updated the initial message of onboarding.
@@ -23,7 +23,7 @@ summary: "Axolo's latest update brings GitHub Proxy integration for enterprises,
 - Ask for feedback if users speak about Axolo.
 - Improved emails after customer plan updates.
 
-🐞 FIX:
+## 🐞 FIX:
 
 - Fixed a bug for enterprise customers on team channels management.
 - Fix a bug where Axolo would send reminders on weekends for specific timezones.
