--- a/data/p/2023-10-01-changelog.mdx
+++ b/data/p/2023-10-01-changelog.mdx
@@ -6,7 +6,7 @@ draft: false
 summary: "Axolo has enhanced its platform with admin access requests for engineers, revamped transactional emails, personalized Slack notifications, and a new usage-based free plan. Security for the admin panel and API has been strengthened, user login and notification systems improved, and a bug affecting new user welcome emails has been fixed."
 ---
 
-✨ NEW:
+## ✨ NEW:
 
 - Enabled engineers to ask admin access on the billing page after reaching the starter plan limit
 - Updated some of our transactional emails to Customer.io
@@ -16,13 +16,13 @@ summary: "Axolo has enhanced its platform with admin access requests for enginee
 - Automatically offer subgroup onboarding possibility for users without any ownership on main GitLab groups
 - Add enhanced security for our admin panel
 
-🔨 IMPROVEMENT:
+## 🔨 IMPROVEMENT:
 
 - Better handling wrong workspace login for our users
 - Enhanced security for our API using VPN filtered routes
 - Update standup and /axolo command notification with PR where someone from the team is also reviewer, not only author
 - Improved the way we identify GitLab bots
 
-🐞 FIX:
+## 🐞 FIX:
 
 - Fix bug where the email welcoming new users was not sent
