--- a/data/p/best-3-github-pull-request-microsoft-teams-integrations.fr.mdx
+++ b/data/p/best-3-github-pull-request-microsoft-teams-integrations.fr.mdx
@@ -116,28 +116,16 @@ Puisqu'il s'agit d'une intégration officielle, il y a des fonctionnalités cool
   />
 </div>
 
-## **3. <a target="_blank" rel="noopener noreferrer nofollow" href="https://automate.io/integration/github/microsoft-teams">Automate.io</a> et <a target="_blank" rel="noopener noreferrer nofollow" href="https://zapier.com/apps/github/integrations/microsoft-teams">Zapier</a>**
+## **3. <a target="_blank" rel="noopener noreferrer nofollow" href="https://zapier.com/apps/github/integrations/microsoft-teams">Zapier</a>**
 
 ### 😍 Ce que nous aimons :
 
-Il est facile de configurer un workflow personnalisé pour des individus ou pour un canal spécifique, surtout si vous avez déjà Zapier ou [Automate.io](http://Automate.io).
+Il est facile de configurer un workflow personnalisé pour des individus ou pour un canal spécifique, surtout si vous avez déjà Zapier.
 
 ### 🤔 Ce qui ne nous plaît pas :
 
 L'absence de notifications pour les actions et déploiements GitHub.
 De plus, les intégrations sont basiques et ne seront probablement pas suffisantes pour répondre à tous vos besoins.
-
-##### **Capture d'écran Automate.io**
-
-<div style={{ display: "flex", justifyContent: "center" }}>
-  <Image
-    width="600"
-    height="300"
-    style={{ borderRadius: "0.5rem", maxWidth: "400px" }}
-    alt="Capture d'écran de l'intégration des équipes GitHub"
-    src="/blog/static/images/teams/automate.jpg"
-  />
-</div>
 
 ## Conclusion
 
