--- a/data/p/best-3-github-pull-request-microsoft-teams-integrations.mdx
+++ b/data/p/best-3-github-pull-request-microsoft-teams-integrations.mdx
@@ -116,28 +116,16 @@ Since this is an official integration there are cool features you will not see i
   />
 </div>
 
-## **3. <a target="_blank" rel="noopener noreferrer nofollow" href="https://automate.io/integration/github/microsoft-teams">Automate.io</a> and <a target="_blank" rel="noopener noreferrer nofollow" href="https://zapier.com/apps/github/integrations/microsoft-teams">Zapier</a>**
+## **3. <a target="_blank" rel="noopener noreferrer nofollow" href="https://zapier.com/apps/github/integrations/microsoft-teams">Zapier</a>**
 
 ### 😍 What we like:
 
-It's easy to set up custom workflow for individuals or for a specific channel, especially if you already have Zapier / or [Automate.io](http://Automate.io).
+It's easy to set up custom workflow for individuals or for a specific channel, especially if you already have Zapier.
 
 ### 🤔 What we don't like:
 
 The lack of GitHub actions and deployments notifications.
 Also the integration are basic and probably won't be enough to fit all your needs.
-
-##### **Automate.io Screenshot**
-
-<div style={{ display: "flex", justifyContent: "center" }}>
-  <Image
-    width="600"
-    height="300"
-    style={{ borderRadius: "0.5rem", maxWidth: "400px" }}
-    alt="GitHub Teams Integration Screenshot"
-    src="/blog/static/images/teams/automate.jpg"
-  />
-</div>
 
 ## Conclusion
 
