--- a/data/p/part-2-how-to-open-a-pull-request.mdx
+++ b/data/p/part-2-how-to-open-a-pull-request.mdx
@@ -4,7 +4,7 @@ date: "2021-11-03"
 lastmod: "2025-04-03"
 tags: ["pull request guide"]
 draft: false
-summary: "In Part II of our Pull Request Guide, we will dive into the processes of opening to merging a pull request and the best advices and integrations to master your code reviews."
+summary: "In Part II of our Pull Request Guide, we will dive into the processes of opening to merging a pull request and the best recommendations and integrations to master your code reviews."
 image: "/blog/static/images/pull-request-guide/how-to-open-a-pr.png"
 endCTA: "DiveIn"
 ---
