--- a/data/p/key-metrics-in-code-collaboration.mdx
+++ b/data/p/key-metrics-in-code-collaboration.mdx
@@ -120,7 +120,7 @@ Rotate reviewers to spread expertise and curb [**context switching**](https://ax
 
 ### Merge Efficiency: Speed vs. Stability in Code Integration
 
-After approval, the sprint isn’t over—code still has to land. **Merge efficiency** measures how quickly and safely code integrates into main.
+**Merge efficiency** means how fast and safely approved code gets added to the main project.
 
 #### Key Merge Metrics to Monitor
 
