--- a/data/p/key-metrics-in-code-collaboration.mdx
+++ b/data/p/key-metrics-in-code-collaboration.mdx
@@ -2,7 +2,7 @@
 title: "Key Metrics in Code Collaboration: Insights on Commit Frequency, PR Reviews, and Merge Efficiency"
 date: "2025-05-14"
 lastmod: "2025-05-14"
-tags: [""]
+tags: ["collaboration", "devops", "metrics"]
 draft: false
 summary: "Discover key metrics in code collaboration that drive productivity and quality. Learn how commit frequency, pull request reviews, and merge efficiency impact your development workflow and team success."
 image: "/blog/static/images/keymetrics/keymetrics.jpg"
