--- a/data/p/axolo-is-soc2-type-2-compliant.mdx
+++ b/data/p/axolo-is-soc2-type-2-compliant.mdx
@@ -7,6 +7,15 @@ image: "/blog/static/images/security/axolo-is-soc2.jpg"
 summary: "With SOC 2 Type II certification, Axolo reinforces its commitment to secure and compliant source code collaboration for businesses."
 ---
 
+<ImageContainer
+  alt="Axolo is SOC 2 Type 2 certified"
+  src="/blog/static/images/security/axolo-is-soc2.jpg"
+  classNameDiv="mx-10 lg:mx-20"
+  classNameImage=""
+  width={1288}
+  height={858}
+/>
+
 ## Axolo Earns SOC 2 Type II Certification 🎉
 
 We're thrilled to announce that **Axolo is now SOC 2 Type II certified** — a big step forward in our mission to keep your data safe and secure.
