--- a/data/p/axolo-is-soc2-type-2-compliant.mdx
+++ b/data/p/axolo-is-soc2-type-2-compliant.mdx
@@ -24,7 +24,7 @@ This certification, overseen by the AICPA, is a trusted benchmark for how well a
 
 <CTABanner type="try" />
 
-### Elevating Trust in Code Collaboration
+## Elevating Trust in Code Collaboration
 
 Axolo’s mission is to streamline code review processes for developers, which naturally involves managing confidential technical information like commits, issues, and workflows. As more large-scale enterprises use our platform, maintaining top-tier security is not just a goal—it’s a necessity. Our recent certification affirms that Axolo's infrastructure, processes, and access protocols are robust, consistent, and independently verified.
 
@@ -32,10 +32,8 @@ Enterprise-grade clients can be confident that Axolo’s systems comply with ind
 
 <UserReview />
 
-### Empowering Teams With Certified Trust
+## Empowering Tech Teams With Certified Trust
 
 For organizations navigating strict regulatory frameworks or vendor assessments, this certification removes friction. Axolo’s verified security posture makes it easier for teams to adopt and trust the platform, knowing we align with stringent operational and data management expectations.
 
-For further information on how Axolo protects your data, explore our [Security Page](https://www.axolo.co/security).
-
-
+For further information on how Axolo protects your data, explore our [Security Page](https://axolo.co/security).
