--- a/data/p/how-legend-cut-pr-review-time-with-axolo.mdx
+++ b/data/p/how-legend-cut-pr-review-time-with-axolo.mdx
@@ -19,9 +19,8 @@ authors: ["sydney"]
   }}
 >
   <div style={{ flex: 1 }}>
-    John is a Senior Engineer at <strong>Legend</strong>, working on the platform behind
-    <strong> Casino.org</strong>. We sat down to discuss how Axolo changed their pull‑request workflow
-    across five squads, cutting review delays and reducing Slack noise.
+    John is a Senior Engineer at <strong>Legend</strong>. We sat down to discuss how Axolo changed
+    their pull‑request workflow across five squads, cutting review delays and reducing Slack noise.
   </div>
 </div>
 
